[package]
name = "ndn-face-net"
description = "NDN network faces: UdpFace, TcpFace, MulticastUdpFace"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["websocket"]
websocket = ["dep:tokio-tungstenite"]

[dependencies]
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
tokio         = { workspace = true, features = ["net", "sync", "io-util"] }
tokio-util    = { workspace = true, features = ["codec"] }
tokio-tungstenite = { workspace = true, optional = true }
futures       = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
ndn-tlv       = { workspace = true, features = ["std"] }
tokio   = { workspace = true, features = ["rt", "macros", "net", "time"] }
