[package]
name = "ndn-face-serial"
description = "NDN serial face: UART/RS-232/RS-485 with COBS framing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true }
bytes         = { workspace = true }
tokio         = { workspace = true, features = ["sync", "io-util"] }
tokio-serial  = { workspace = true }
thiserror     = { workspace = true }
