[package]
name = "ndn-face-serial"
description = "NDN serial face: UART/RS-232/RS-485 with COBS framing"
version.workspace = true
edition.workspace = true
license.workspace = true

# tokio-serial supports Linux, macOS, and Windows via the `serialport` crate.
# It is not available for WASM or bare-metal embedded targets.
# The `serial` feature (default on) allows dependents to disable this crate's
# tokio-serial dependency when targeting platforms without serial port support.
[features]
default = ["serial"]
serial  = ["dep:tokio-serial"]

[dependencies]
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true }
bytes         = { workspace = true }
tokio         = { workspace = true, features = ["sync", "io-util"] }
tokio-serial  = { workspace = true, optional = true }
tokio-util    = { workspace = true, features = ["codec"] }
futures       = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }
