[package]
name = "ndn-face-wireless"
description = "NDN wireless faces: NamedEtherFace (AF_PACKET), WfbFace, BluetoothFace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true }
ndn-face-net  = { workspace = true }
bytes         = { workspace = true }
tokio         = { workspace = true, features = ["sync", "io-util"] }
dashmap       = { workspace = true }
thiserror     = { workspace = true }
