[package]
name = "ndn-face-wireless"
description = "NDN wireless faces: NamedEtherFace and WfbFace (Linux only), BluetoothFace (Linux only), NeighborDiscovery, RadioTable"
version.workspace = true
edition.workspace = true
license.workspace = true

# Platform note: NamedEtherFace, WfbFace, and BluetoothFace are compiled only
# on Linux (#[cfg(target_os = "linux")]). NeighborDiscovery and RadioTable are
# cross-platform data structures and compile everywhere.
[features]
default = []

[dependencies]
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true }
ndn-face-net  = { workspace = true }
bytes         = { workspace = true }
tokio         = { workspace = true, features = ["sync", "io-util"] }
dashmap       = { workspace = true }
thiserror     = { workspace = true }
