[package]
name = "ndn-ipc"
description = "NDN IPC layer: IpcClient, IpcServer, ServiceRegistry, ChunkedTransfer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-app    = { workspace = true }
ndn-packet = { workspace = true }
bytes      = { workspace = true }
tokio      = { workspace = true, features = ["sync"] }
thiserror  = { workspace = true }
