[package]
name = "ndn-ipc"
description = "NDN IPC layer: IpcClient, IpcServer, ServiceRegistry, ChunkedTransfer"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["spsc-shm"]
spsc-shm = ["ndn-face-local/spsc-shm"]

[dependencies]
ndn-packet     = { workspace = true }
ndn-config     = { workspace = true }
ndn-face-local = { workspace = true }
ndn-transport  = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
tokio          = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
