[package]
name = "ndn-packet"
description = "NDN packet types: Name, Interest, Data, Nack"
version.workspace = true
edition.workspace = true
license.workspace = true

# `std` is enabled by default. Disable for bare-metal embedded targets
# (requires an allocator; configure `bytes`/`smallvec` without std):
#
#   ndn-packet = { path = "...", default-features = false }
[features]
default = ["std"]
std     = ["ndn-tlv/std"]

[dependencies]
ndn-tlv   = { workspace = true }
bytes     = { workspace = true }
smallvec  = { workspace = true }
