[package]
name = "ndn-packet"
description = "NDN packet types: Name, Interest, Data, Nack"
version.workspace = true
edition.workspace = true
license.workspace = true

# `std` is enabled by default. Disable for bare-metal embedded targets
# (requires an allocator; configure `bytes`/`smallvec` without std):
#
#   ndn-packet = { path = "...", default-features = false }
[features]
default = ["std"]
std     = ["ndn-tlv/std", "bytes/std", "dep:ring"]

[dependencies]
ndn-tlv  = { workspace = true, default-features = false }
bytes    = { workspace = true }
smallvec = { workspace = true }
ring     = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
ndn-tlv       = { workspace = true, features = ["std"] }

[[bench]]
name    = "name"
harness = false
