[package]
name = "ndn-research"
description = "NDN research extensions: FlowObserverStage, RadioTable, nl80211 integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet        = { workspace = true, features = ["std"] }
ndn-pipeline      = { workspace = true }
ndn-transport     = { workspace = true }
ndn-face-l2 = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
tokio             = { workspace = true, features = ["sync"] }
dashmap           = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
