[package]
name = "ndn-security"
description = "NDN security: signing, verification, trust schema, and certificate management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet    = { workspace = true }
ndn-tlv       = { workspace = true, features = ["std"] }
bytes         = { workspace = true, features = ["std"] }
dashmap       = { workspace = true }
thiserror     = { workspace = true }
ring          = { workspace = true }
ed25519-dalek = { workspace = true }

tokio         = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tokio      = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tempfile   = "3"
criterion  = { workspace = true }
ndn-tlv       = { workspace = true, features = ["std"] }

[[bench]]
name    = "security"
harness = false
