[package]
name = "ndn-security"
description = "NDN security: signing, verification, trust schema, and certificate management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet    = { workspace = true, features = ["std"] }
ndn-tlv       = { workspace = true, features = ["std"] }
bytes         = { workspace = true, features = ["std"] }
dashmap       = { workspace = true }
thiserror     = { workspace = true }
ring          = { workspace = true }
ed25519-dalek = { workspace = true }
# DID support (formerly ndn-did)
serde         = { workspace = true }
serde_json    = { workspace = true }
base64        = { workspace = true }
futures       = { workspace = true }

tokio         = { workspace = true, features = ["sync", "time", "rt"] }

# Optional hardware key storage via YubiKey PIV (feature: yubikey-piv).
# Requires pcscd and a connected YubiKey.
yubikey = { version = "0.8", optional = true }

[features]
yubikey-piv = ["dep:yubikey"]

[dev-dependencies]
tokio      = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tempfile   = "3"
criterion  = { workspace = true }
ndn-tlv       = { workspace = true, features = ["std"] }

[[bench]]
name    = "security"
harness = false
