[package]
name = "ndn-store"
description = "NDN forwarding tables: NameTrie, PIT, and ContentStore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet = { workspace = true }
bytes      = { workspace = true }
dashmap    = { workspace = true }
smallvec   = { workspace = true }
lru        = { workspace = true }
thiserror  = { workspace = true }
