[package]
name = "ndn-strategy"
description = "Built-in NDN forwarding strategies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet   = { workspace = true }
ndn-pipeline = { workspace = true }
ndn-store    = { workspace = true }
ndn-transport = { workspace = true }
smallvec     = { workspace = true }
dashmap      = { workspace = true }
