[package]
name = "ndn-strategy"
description = "Built-in NDN forwarding strategies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet    = { workspace = true, features = ["std"] }
ndn-pipeline  = { workspace = true }
ndn-store     = { workspace = true }
ndn-transport = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
smallvec      = { workspace = true }
dashmap       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
