[package]
name = "ndn-sync"
description = "NDN dataset synchronisation protocols: SVS, PSync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-app    = { workspace = true }
ndn-packet = { workspace = true }
bytes      = { workspace = true }
tokio      = { workspace = true, features = ["sync"] }
