[package]
name = "ndn-sync"
description = "NDN dataset synchronisation protocols: SVS, PSync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
tokio      = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tokio-util = { workspace = true }
thiserror  = { workspace = true }
fastrand   = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
