[package]
name = "ndn-transport"
description = "NDN Face trait, FaceId, FaceTable, and RawPacket"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet = { workspace = true }
bytes      = { workspace = true }
tokio      = { workspace = true, features = ["sync"] }
thiserror  = { workspace = true }
dashmap    = { workspace = true }
