[package]
name = "ndn-transport"
description = "NDN Face trait, FaceId, FaceTable, RawPacket, TlvCodec, and FacePairTable"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet = { workspace = true }
ndn-tlv    = { workspace = true }
bytes      = { workspace = true }
tokio      = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["codec"] }
thiserror  = { workspace = true }
dashmap    = { workspace = true }
