[package]
name = "ndn-transport"
description = "NDN Face trait, FaceId, FaceTable, RawPacket, TlvCodec, and FacePairTable"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
ndn-packet = { workspace = true, features = ["std"] }
ndn-tlv       = { workspace = true, features = ["std"] }
bytes         = { workspace = true, features = ["std"] }
futures    = { workspace = true }
tokio      = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["codec"] }
thiserror  = { workspace = true }
smallvec   = { workspace = true }
serde      = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dashmap = { workspace = true }
